# learn-to-build-cmake-bazel

./: CMakeLists.txt  README.md
src/: BUILD.bazel  CMakeLists.txt  main.cpp  test.cpp  test.hpp
