cc_binary(
    name = "main",
    srcs = ["main.cpp"],
    copts = ["-Ipath/that/doesnt/exist -Wall -Wmissing-include-dirs"],
    deps = [":test_lib"]
)

cc_library(
    name = "test_lib",
    srcs = ["test.cpp"],
    hdrs = ["test.hpp"],
    copts = ["-Ipath/that/doesnt/exist -Wall -Wmissing-include-dirs"],
)